# mad

./: .gitignore  README.md
livro/: 1-capa.md  2-sumario.md
src/backend/: .dockerignore  Dockerfile  TrazendoBuildDoFront.Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
src/backend/backend/: settings.py  urls.py
src/frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json
src/frontend-basico/: Dockerfile  index.html  nginx.conf  readme.txt  scripts.js
src/frontend/src/app/: app.component.ts  app.module.ts
src/frontend/src/app/users/: users.component.html  users.component.ts  users.models.ts  users.service.ts
src/infra/: docker-compose.yml
src/infra/basico/: README.md
src/infra/basico/exemplos/: AlpinePython
src/infra/basico/sisteminhas/: AlpinePython  AlpineZSH10K
src/infra/nginx/: nginx.conf
