[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend do livro MAD"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
